# qdrant_example

./: .pre-commit-config.yaml  Makefile  README.md  example.txt  pyproject.toml
dev/: docker-compose-qd.yml
notebooks/: crud.ipynb  rag.ipynb  search_with_embedding.ipynb
src/: crud.py  embeddings.py  rag.py
