[project]
name = "qdrant-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
main = [
    "google-generativeai==0.5.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "openai>=1.84.0",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
]
